--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1hw8CvG6gS8-Xj85ztG43DuY0zbM6wcox/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/14kCmWRtcOgNB2Vlul0tvJMRm11Bab7AO/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -517,7 +517,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1hw8CvG6gS8-Xj85ztG43DuY0zbM6wcox/view?usp=drive_link">Resume Link</a></p>
+	            <p><a href="https://drive.google.com/file/d/14kCmWRtcOgNB2Vlul0tvJMRm11Bab7AO/view?usp=drive_link">Resume Link</a></p>
 	          </div>
           </div>
 
